--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
     "name": "bacalhau",
     "version": "1.0.0",
     "description": "",
-    "main": "bacalhau.js",
+    "main": "index.js",
+    "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node bacalhau.js"
+        "start": "node index.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google-cloud/functions-framework": "^3.1.2",
+        "express": "^4.18.2",
         "shelljs": "^0.8.5"
     }
 }
